Fix element width overflowing body width

--- a/src/components/Event/Event.styl
+++ b/src/components/Event/Event.styl
@@ -42,7 +42,7 @@ img
     box-sizing: border-box
     display: flex
     height: 50px
-    padding-left: 20px
+    padding: 0 20px
 
   .row1
     display: flex
@@ -237,23 +237,18 @@ img
     margin-bottom: 5px
 
   ul
-    margin: 0 0 10px
+    margin: 0 0 5px
     padding: 0
+    display: flex
+    flex-wrap: wrap
 
     li
       border: solid 1px $white
       border-radius: 25px
-      display: inline
+      display: block
       font: 12px 'Open Sans', sans-serif
-      margin-right: 5px
+      margin: 0 5px 5px 0
       padding: 0 6px 1px
-
-  .shadow
-    background: linear-gradient(to right, rgba(16, 16, 16, 0), rgba(16, 16, 16, 1))
-    height: 100%
-    position: absolute
-    right: -5px
-    width: 20px
 
 .links
 
