--- a/src/components/Venue/Venue.styl
+++ b/src/components/Venue/Venue.styl
@@ -124,7 +124,9 @@ nav
 
 .toCome
   display: flex
+  font-style: italic
   font-weight: 600
   justify-content: center
   margin-top: 35px
   opacity: .3
+  padding-right: 10px
